--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "intervention/image": "^2.5",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
+        "nesbot/carbon": "^2.50",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
