--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@vue/compiler-sfc": "^3.1.2",
         "axios": "^0.19",
         "bootstrap": "^4.4.1",
         "browser-sync": "^2.26.7",
@@ -24,6 +25,7 @@
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.5",
         "sass-loader": "^8.0.2",
+        "vue-loader": "^16.2.0",
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
