--- a/public/assets/plugins/@mdi/package.json
+++ b/public/assets/plugins/@mdi/package.json
@@ -1,45 +1,25 @@
 {
-  "_from": "@mdi/font@^5.1.45",
-  "_id": "@mdi/font@5.1.45",
-  "_inBundle": false,
-  "_integrity": "sha512-7H1UMwUpEp8mthdPlpAi7bhEyvTbvtK1TlA89scc0cXMpQy0UFygdkaf+6fveIxpBcRNgw0gnGSEonlsfYocXg==",
-  "_location": "/@mdi/font",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "@mdi/font@^5.1.45",
-    "name": "@mdi/font",
-    "escapedName": "@mdi%2ffont",
-    "scope": "@mdi",
-    "rawSpec": "^5.1.45",
-    "saveSpec": null,
-    "fetchSpec": "^5.1.45"
-  },
-  "_requiredBy": [
-    "/"
-  ],
-  "_resolved": "https://registry.npmjs.org/@mdi/font/-/font-5.1.45.tgz",
-  "_shasum": "58edff65985cc5a350eb95ff2974273a285ea9ad",
-  "_spec": "@mdi/font@^5.1.45",
-  "_where": "/Users/nobleui/Projects/ui-laravel/template/light",
-  "author": {
-    "name": "Austin Andrews",
-    "url": "http://twitter.com/templarian"
-  },
-  "bugs": {
-    "url": "https://github.com/Templarian/MaterialDesign/issues"
-  },
-  "bundleDependencies": false,
-  "deprecated": false,
+  "name": "@mdi/font",
+  "version": "5.1.45",
   "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
-  "homepage": "https://materialdesignicons.com",
+  "style": "css/materialdesignicons.css",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Templarian/MaterialDesign-Webfont.git"
+  },
   "keywords": [
     "material",
     "design",
     "icons",
     "webfont"
   ],
+  "author": {
+    "name": "Austin Andrews",
+    "web": "http://twitter.com/templarian"
+  },
   "licenses": [
     {
       "type": "OFL-1.1",
@@ -50,14 +30,8 @@
       "url": "http://opensource.org/licenses/mit-license.html"
     }
   ],
-  "name": "@mdi/font",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Templarian/MaterialDesign-Webfont.git"
+  "bugs": {
+    "url": "https://github.com/Templarian/MaterialDesign/issues"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "style": "css/materialdesignicons.css",
-  "version": "5.1.45"
+  "homepage": "https://materialdesignicons.com"
 }
