--- a/public/assets/plugins/flag-icon-css/package.json
+++ b/public/assets/plugins/flag-icon-css/package.json
@@ -1,37 +1,17 @@
 {
-  "_from": "flag-icon-css@^3.4.6",
-  "_id": "flag-icon-css@3.4.6",
-  "_inBundle": false,
-  "_integrity": "sha512-rF69rt19Hr63SRQTiPBzQABaYB20LAgZhDkr/AxqSdgmCIN+tC5PRMz56Y0gxehFXJmdRwv55+GMi7R1fCRTwg==",
-  "_location": "/flag-icon-css",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "flag-icon-css@^3.4.6",
-    "name": "flag-icon-css",
-    "escapedName": "flag-icon-css",
-    "rawSpec": "^3.4.6",
-    "saveSpec": null,
-    "fetchSpec": "^3.4.6"
-  },
-  "_requiredBy": [
-    "/"
+  "name": "flag-icon-css",
+  "version": "3.4.6",
+  "author": "Panayiotis Lipiridis <lipiridis@gmail.com>",
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://opensource.org/licenses/MIT"
+    }
   ],
-  "_resolved": "https://registry.npmjs.org/flag-icon-css/-/flag-icon-css-3.4.6.tgz",
-  "_shasum": "7e51099c85648c65f86d9ebb9c0ec6f5d8826714",
-  "_spec": "flag-icon-css@^3.4.6",
-  "_where": "/Users/nobleui/Projects/ui-laravel/template/light",
-  "author": {
-    "name": "Panayiotis Lipiridis",
-    "email": "lipiridis@gmail.com"
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/lipis/flag-icon-css"
   },
-  "bugs": {
-    "url": "https://github.com/lipis/flag-icon-css/issues"
-  },
-  "bundleDependencies": false,
-  "deprecated": false,
-  "description": "> A collection of all country flags in SVG — plus the CSS for easier integration. > See the [demo](http://flag-icon-css.lip.is).",
   "devDependencies": {
     "grunt": "1.0.4",
     "grunt-contrib-connect": "2.1.0",
@@ -43,36 +23,23 @@
     "prettier": "1.19.1",
     "svgo": "1.3.2"
   },
-  "homepage": "https://github.com/lipis/flag-icon-css#readme",
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/MIT"
-    }
-  ],
   "lint-staged": {
     "*.{json,md,scss,less,yaml,yml}": [
       "prettier --write"
     ]
   },
-  "name": "flag-icon-css",
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/lipis/flag-icon-css.git"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "scripts": {
     "build": "grunt build",
+    "svgo": "svgo --pretty --indent=2 --precision=1 --config=svgo.yaml",
+    "svgo:min": "find flags | grep '\\.svg$' | xargs -Iz -n 1 svgo --config=svgo.yaml z",
+    "svgo:all": "find flags | grep '\\.svg$' | xargs -Iz -n 1 yarn svgo z",
     "fix": "yarn prettier --write",
     "prettier": "prettier \"**/*.{json,md,scss,less,yaml,yml}\"",
-    "svgo": "svgo --pretty --indent=2 --precision=1 --config=svgo.yaml",
-    "svgo:all": "find flags | grep '\\.svg$' | xargs -Iz -n 1 yarn svgo z",
-    "svgo:min": "find flags | grep '\\.svg$' | xargs -Iz -n 1 svgo --config=svgo.yaml z",
     "test": "yarn prettier --list-different"
-  },
-  "version": "3.4.6"
+  }
 }
