--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "sweetalert2": "^9.10.12",
         "tempusdominus-bootstrap-4": "^5.1.2",
         "tinymce": "^5.2.2",
-        "typeahead.js": "^0.11.1"
+        "typeahead.js": "^0.11.1",
+        "vue": "^2.6.14"
     }
 }
