--- a/public/assets/plugins/@mdi/package.json
+++ b/public/assets/plugins/@mdi/package.json
@@ -1,37 +1,54 @@
 {
-  "name": "@mdi/font",
-  "version": "5.1.45",
+  "_from": "@mdi/font@^5.1.45",
+  "_id": "@mdi/font@5.9.55",
+  "_inBundle": false,
+  "_integrity": "sha512-jswRF6q3eq8NWpWiqct6q+6Fg/I7nUhrxYJfiEM8JJpap0wVJLQdbKtyS65GdlK7S7Ytnx3TTi/bmw+tBhkGmg==",
+  "_location": "/@mdi/font",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "range",
+    "registry": true,
+    "raw": "@mdi/font@^5.1.45",
+    "name": "@mdi/font",
+    "escapedName": "@mdi%2ffont",
+    "scope": "@mdi",
+    "rawSpec": "^5.1.45",
+    "saveSpec": null,
+    "fetchSpec": "^5.1.45"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/@mdi/font/-/font-5.9.55.tgz",
+  "_shasum": "41acd50b88073ded7095fc3029d8712b6e12f38e",
+  "_spec": "@mdi/font@^5.1.45",
+  "_where": "/home/pragyan/Desktop/Laravel-Project/vivakshaa_backend",
+  "author": {
+    "name": "Austin Andrews",
+    "url": "http://twitter.com/templarian"
+  },
+  "bugs": {
+    "url": "https://github.com/Templarian/MaterialDesign/issues"
+  },
+  "bundleDependencies": false,
+  "deprecated": false,
   "description": "Dist for Material Design Webfont. This includes the Stock and Community icons in a single webfont collection.",
-  "style": "css/materialdesignicons.css",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Templarian/MaterialDesign-Webfont.git"
-  },
+  "homepage": "https://materialdesignicons.com",
   "keywords": [
     "material",
     "design",
     "icons",
     "webfont"
   ],
-  "author": {
-    "name": "Austin Andrews",
-    "web": "http://twitter.com/templarian"
+  "license": "Apache-2.0",
+  "name": "@mdi/font",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Templarian/MaterialDesign-Webfont.git"
   },
-  "licenses": [
-    {
-      "type": "OFL-1.1",
-      "url": "http://scripts.sil.org/OFL"
-    },
-    {
-      "type": "MIT",
-      "url": "http://opensource.org/licenses/mit-license.html"
-    }
-  ],
-  "bugs": {
-    "url": "https://github.com/Templarian/MaterialDesign/issues"
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "homepage": "https://materialdesignicons.com"
+  "style": "css/materialdesignicons.css",
+  "version": "5.9.55"
 }
